# einsteins_equation_proven

./: README.md
core_simulation/: README.md  app.py  architecture.md  code_creation_prompt.txt  pyproject.toml  requirements.txt
core_simulation/simulation/: boiling.py  einstein.py
core_simulation/static/: simulation.js  styles.css
core_simulation/templates/: index.html
public/: index.html  manifest.json
